[workspace]
members = [
	"gate",
	"web",
	"oracle"
]
default-members = [
	"web"
]

[profile.dev]
opt-level = 3

[workspace.dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[workspace.dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.17", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
futures = { version = "0.3.17", default-features = false }
