[package]
name = "providers"
version = "0.1.0"
authors = ["Shronk <ureshpohar@gmail.com>"]
edition = "2021"

[dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
web3 = { version = "0.17.0" }
async-trait = { version = "0.1.57", default-features = false }
thiserror = { version = "1.0.24", default-features = false }

# Common
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
