[package]
name = "rusty-gate-web"
version = "0.1.0"
authors = ["Shronk <ureshpohar@gmail.com>"]
edition = "2021"

[dev-dependencies]
shiba = { version = "0.1.1", default-features = false }

[dependencies]
rusty-gate = { path = "../gate" }
tokio = { version = "1.20.1", features = ["macros"] }
actix-web = { version = "4.2.1" }
lazy_static = { version = "1.4.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
log = { version = "0.4.17", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
structopt = { version = "0.3", default-features = false }
futures = { version = "0.3.17", default-features = false }
env_logger = { version = "0.9.0" }
